# keeper-security

./: .env.example  .gitignore  .mcp.json  .mcpbignore  .rumdl.toml  CLAUDE.md  CONTRIBUTING.md  LICENSE.md  README.md  SECURITY.md  TEST_PROMPTS.md  Taskfile.yaml  keeper.mcpb  legacy-keeper-plugin.bundle  legacy-verify-repo-setup.bundle  manifest.json  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.cursor-plugin/: marketplace.json
.social/: PHILOSOPHY.md  build_social.py
docs/: mcp-server.md
plugins/keeper-admin/.claude-plugin/: plugin.json
plugins/keeper-admin/.cursor-plugin/: plugin.json
plugins/keeper-admin/agents/: pam-session-broker.md  secrets-access-auditor.md
plugins/keeper-admin/commands/: enterprise-report.md  rotate-secret.md  vault-search.md
plugins/keeper-msp/.claude-plugin/: plugin.json
plugins/keeper-msp/.cursor-plugin/: plugin.json
plugins/keeper-msp/commands/: msp-status.md
plugins/keeper-secrets/: .mcp.json
plugins/keeper-secrets/.claude-plugin/: plugin.json
plugins/keeper-secrets/.cursor-plugin/: plugin.json
plugins/keeper-secrets/commands/: get-secret.md  list-secrets.md
plugins/keeper-setup/.claude-plugin/: plugin.json
plugins/keeper-setup/.cursor-plugin/: plugin.json
scripts/: validate-commit-msg.sh  validate-plugins.sh
skills/keeper-admin/: SKILL.md
skills/keeper-admin/references/: commander-commands.md  endpoint-privilege-management.md  msp-management.md
skills/keeper-secrets/: SKILL.md
skills/keeper-setup/: SKILL.md
src/keeper_mcp/: __init__.py  commander.py  server.py
(+17 files in other folders)
