[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "keeper-mcp"
version = "0.1.0"
description = "Local MCP server exposing the Keeper Security vault and MSP/enterprise admin console via the Keeper Commander CLI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.0,<4",
    "keepercommander>=17.3,<19",
]

[project.scripts]
keeper-mcp = "keeper_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/keeper_mcp"]
